bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_type_id_12bit.rs
use macbat::Event;
#[derive(Event)]
#[batpak(category = 1, type_id = 0x1000)]
struct E {
    a: u8,
}
fn main() {}
